# olymp-templates

./: doc.tex  init-olymp  initOlymp.sh
olymp/: CMakeLists.txt  Olymp.cpp  Olymp.java  Olymp.kt  Olymp.py  Olymp.scala  check.py  olymp_google.cpp
